Extract visualization function to library

--- a/notebook/Iris Dataset - Perceptron.ipynb
+++ b/notebook/Iris Dataset - Perceptron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "%matplotlib inline\n",
     "\n",
     "from pyml_perceptron.defaults import IRIS_DATASET\n",
-    "from pyml_perceptron.core.perceptron import Perceptron"
+    "from pyml_perceptron.core.perceptron import Perceptron\n",
+    "from pyml_perceptron.visualization.common import plot_decision_regions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,103 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       0    1    2    3               4\n",
-       "145  6.7  3.0  5.2  2.3  Iris-virginica\n",
-       "146  6.3  2.5  5.0  1.9  Iris-virginica\n",
-       "147  6.5  3.0  5.2  2.0  Iris-virginica\n",
-       "148  6.2  3.4  5.4  2.3  Iris-virginica\n",
-       "149  5.9  3.0  5.1  1.8  Iris-virginica"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -187,36 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib.colors import ListedColormap\n",
-    "\n",
-    "def plot_decision_regions(X, y, classifier, resolution=0.02):\n",
-    "    # Setup marker generator and color map\n",
-    "    markers = ('s', 'x', 'o', '^', 'v')\n",
-    "    colors = ('red', 'blue', 'lightgreen', 'gray', 'cyan')\n",
-    "    cmap = ListedColormap(colors[:len(np.unique(y))])\n",
-    "    \n",
-    "    # Plot the decision surface\n",
-    "    x1_min, x1_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
-    "    x2_min, x2_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
-    "    xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution), np.arange(x2_min, x2_max, resolution))\n",
-    "    Z = classifier.predict(np.array([xx1.ravel(), xx2.ravel()]).T)\n",
-    "    Z = Z.reshape(xx1.shape)\n",
-    "    plt.contourf(xx1, xx2, Z, alpha=0.3, cmap=cmap)\n",
-    "    plt.xlim(xx1.min(), xx1.max())\n",
-    "    plt.ylim(xx2.min(), xx2.max())\n",
-    "    \n",
-    "    # Plot class samples\n",
-    "    for idx, cl in enumerate(np.unique(y)):\n",
-    "        plt.scatter(x=X[y == cl, 0], y=X[y == cl, 1], alpha=0.8, c=colors[idx], marker=markers[idx], label=cl, edgecolor='black')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
